<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
	android:id="@+id/compra_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compra_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compra_titulo">

        <RadioButton
            android:id="@+id/radioTradicional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresso_trad" />

        <RadioButton
            android:id="@+id/radioVip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresso_vip" />
    </RadioGroup>

    <EditText
        android:id="@+id/codId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

    <EditText
        android:id="@+id/funcao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_funcao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codId"/>

    <TextView
        android:id="@+id/valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_valor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/funcao"/>

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_comprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor" />


</androidx.constraintlayout.widget.ConstraintLayout>